--- a/src/components/home/ticket-details/purchase.module.scss
+++ b/src/components/home/ticket-details/purchase.module.scss
@@ -26,6 +26,9 @@
     .heading {
       text-align: center;
       margin-bottom: 4rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
 
       @include media('<=tablet') {
         margin-bottom: 2rem;
