--- a/src/components/purchase-ticket/components/checkout/checkout.module.scss
+++ b/src/components/purchase-ticket/components/checkout/checkout.module.scss
@@ -21,18 +21,18 @@
       color: #1c1c1c;
       font-size: 16px;
       font-weight: 400;
-      margin-bottom: 0.65rem;
+      // margin-bottom: 0.65rem;
     }
 
     &_list_group {
       list-style: none;
       display: flex;
       flex-direction: column;
-      gap: 2rem;
+      gap: 1rem;
 
       &_item {
         padding-bottom: 1rem;
-        border-bottom: 1px solid #cccccc;
+        // border-bottom: 1px solid #cccccc;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -56,6 +56,7 @@
   @include media('<=tablet') {
     border: 1.3px solid #b3b3b3;
     border-radius: 10.38px;
+    min-height: 400px;
 
     &_header {
       border-bottom: 0.65px solid #b3b3b3;
