--- a/src/components/purchase-ticket/components/ticket-type/type.module.scss
+++ b/src/components/purchase-ticket/components/ticket-type/type.module.scss
@@ -29,7 +29,7 @@
   }
 
   &_body {
-    padding: 32px 0;
+    margin: 32px 0;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -44,6 +44,8 @@
       display: flex;
       align-items: center;
       justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 1rem;
 
       &_title {
         font-weight: 600;
@@ -51,13 +53,29 @@
       }
 
       &_detail {
-        width: 60%;
+        width: 100%;
         font-weight: 400;
         font-size: 1rem;
       }
     }
 
     @include media('>=desktop') {
+      &_wrapper {
+        flex-wrap: nowrap;
+
+        &_detail {
+          width: 50%;
+        }
+      }
     }
+  }
+}
+
+.input_wrapper {
+  display: flex;
+  gap: 10px;
+
+  @include media('>=desktop') {
+    margin-left: auto;
   }
 }
