--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -16,13 +16,65 @@
 
 .modal_container {
   background: #fff;
-  // padding: 20px;
-  // border-radius: 8px;
   position: relative;
   width: 100%;
-  top: 2rem;
-  height: 90vh;
+  max-height: 95vh;
   transition: 0.3s all ease-in-out;
+  // overflow: hidden;
+  // padding-bottom: 1.5rem;
+
+  @include media('>=tablet') {
+    top: 2rem;
+    border-radius: 0 0 32px 32px;
+  }
+}
+
+.modal_header {
+  width: 100%;
+  height: 70px;
+  position: absolute;
+  top: -70px;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: transparent;
+
+  @include media('<=tablet') {
+    position: unset;
+    padding: 22px 22px 0;
+  }
+}
+
+.top_pop {
+  height: 70px;
+  padding: 0 34px;
+  border-radius: 32px 32px 0px 0px;
+  background-color: #ffffff;
+  display: inline-flex;
+  align-items: center;
+
+  @include media('<=tablet') {
+    padding: 0;
+    height: unset;
+  }
+}
+
+.cancel_text {
+  font-weight: 500;
+  font-size: 1rem;
+  color: #000000;
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+
+  @include media('<=tablet') {
+    &_name {
+      display: none;
+    }
+  }
 }
 
 .modal-close-button {
@@ -36,8 +88,13 @@
 }
 
 .modal_content {
-  height: 88vh;
-  // overflow-y: auto;
+  max-height: 90vh;
+  padding-bottom: 1.5rem;
+  overflow-y: auto;
+
+  @include media('>=tablet') {
+    max-height: 85vh;
+  }
 }
 
 // width
