--- a/src/components/purchase-ticket/components/checkout/checkout.module.scss
+++ b/src/components/purchase-ticket/components/checkout/checkout.module.scss
@@ -5,6 +5,7 @@
   border: 2px solid #b3b3b3;
   border-radius: 16px;
   width: 100%;
+  min-height: 400px;
 
   &_header {
     border-bottom: 1px solid #b3b3b3;
@@ -15,7 +16,12 @@
   }
 
   &_body {
-    padding: 36px 16px 90px;
+    padding: 36px 16px 30px;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+    justify-content: space-between;
 
     &_date {
       color: #1c1c1c;
@@ -29,6 +35,7 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
+      margin-bottom: 1rem;
 
       &_item {
         padding-bottom: 1rem;
