--- a/src/components/purchase-ticket/components/ticket-type/type.module.scss
+++ b/src/components/purchase-ticket/components/ticket-type/type.module.scss
@@ -11,10 +11,12 @@
     &_title {
       font-weight: 500;
       font-size: 1.375rem;
+      color: #1e1e1e;
     }
 
     &_detail {
       font-size: 0.875rem;
+      color: #666666;
     }
 
     @include media('>=desktop') {
@@ -51,12 +53,15 @@
       &_title {
         font-weight: 600;
         font-size: 1.125rem;
+        color: #1c1c1c;
       }
 
       &_detail {
-        width: 100%;
         font-weight: 400;
-        font-size: 1rem;
+        font-size: 0.875rem;
+        color: #1c1c1c;
+        line-height: 20px;
+        width: 80%;
       }
     }
 
@@ -66,6 +71,7 @@
 
         &_detail {
           width: 50%;
+          font-size: 1rem;
         }
       }
     }
